OAK-11130 - indexing-job: Improvements to logging of AOT Blob downloader (#1724)